# profiler_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
doc/: engine_class_diagram.puml  engine_sequence_diagram.puml
src/profiler_agent/: __init__.py  assessment_data.py  config.py  models.py  server.py
src/profiler_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/profiler_agent/a2a/: executor.py
src/profiler_agent/interview/: engine.py  prompts.py  repository.py
src/profiler_agent/llm/: huggingface.py  prompts.py
src/profiler_agent/mcp/: client.py
tests/integration/: test_a2a_integration.py  test_mcp_client_integration.py
tests/unit/: test_a2a_executor.py  test_interview_engine.py  test_interview_prompts.py  test_llm_prompts.py  test_mcp_client_payload.py
