[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profiler-agent"
version = "0.1.0"
description = "Agente A2A con LangGraph para recuperar o construir el perfil Kolb de un alumno usando MCP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk==0.3.26",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "langgraph>=0.6,<1.0",
    "mcp==1.27.0",
    "pydantic-settings>=2.8,<3.0",
    "python-dotenv>=1.0,<2.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.26,<1.0",
]

[project.scripts]
profiler-agent = "profiler_agent.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests de integracion contra servicios externos",
]
asyncio_mode = "auto"
